Added trickery to the code.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+
+<script src="JS/game.js"></script>
+<script src="JS/form.js"></script>
+<script src="JS/player.js"></script>
+   
+<link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
 
   </head>
